--- a/blocks/cover/__background/cover__background.css
+++ b/blocks/cover/__background/cover__background.css
@@ -1,9 +1,27 @@
 .cover__background {
+    background-image: url(../../../images/cover-trains.jpg);
+    background-size: cover;
     position: absolute;
     right: 0;
     top: 0;
     background-size: cover;
     width: 100%;
     height: 100%;
+}
+
+.cover__background::after {
+    content: "";
+    position: absolute;
+    right: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #2A2C2F;
+    opacity: 30%;
+    transition: opacity 0.5s;
+}
+
+.cover__background:hover::after {
+    opacity: 80%;
 }
 
