--- a/blocks/header/__langs/header__langs.css
+++ b/blocks/header/__langs/header__langs.css
@@ -1,9 +1,9 @@
 .header__langs {
     height: min-content;
-    display: flex;
-    flex-direction: row;
+    display: grid;
+    grid-template-columns: repeat(2, max-content);
+    column-gap: 18px;
     margin: 18px 0 6px;
-    align-items: flex-end;
     padding: 0;
     list-style-type: none;
 }
