--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -1,5 +1,5 @@
 .lead__caption {
-    width: 100%;
+    max-width: 100%;
     font-weight: 400;
     letter-spacing: 1.5px;
     text-transform: uppercase;
