--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -19,12 +19,12 @@
 
 @media screen and (min-width: 768px) and (max-width: 1023px) {
     .lead__image {
-        min-width: 768px;
+        min-width: 100%;
     }
 }
 
 @media screen and (min-width: 320px) and (max-width: 767px) {
     .lead__image {
-        min-width: 320px;
+        min-width: 100%;
     }
 }
