--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -8,7 +8,7 @@
     .photo-grid {
         max-width: 1184px;
         gap: 16px;
-        grid-template-rows: repeat(dense, minmax(213px, 1fr));
+        grid-auto-rows: minmax(213px, 1fr);
         grid-template-columns: repeat(auto-fill, minmax(284px, 1fr));
     }    
 }
@@ -18,7 +18,7 @@
     .photo-grid {
         max-width: 928px;
         gap: 14px;
-        grid-template-rows: repeat(dense, minmax(225px, 1fr));
+        grid-auto-rows: minmax(225px, 1fr);
         grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
     }  
 }
@@ -28,7 +28,7 @@
     .photo-grid {
         max-width: 720px;
         gap: 16px;
-        grid-template-rows: repeat(dense, minmax(264px, 1fr));
+        grid-auto-rows: minmax(264px, 1fr);
         grid-template-columns: repeat(auto-fill, minmax(352px, 1fr));
     }
 }
@@ -38,7 +38,7 @@
     .photo-grid {
         max-width:288px;
         row-gap: 12px;
-        grid-template-rows: repeat(dense, minmax(216px, 1fr));
+        grid-auto-rows: minmax(216px, 1fr);
         grid-template-columns: repeat(auto-fill, minmax(288px, 1fr));
     }
 }
